Various styling fixes
- Make breadcrumb link invisible
- Switch to weird version numbering
- Adjust Extension text padding

--- a/src/modules/core/components/BreadCrumb/BreadCrumb.css
+++ b/src/modules/core/components/BreadCrumb/BreadCrumb.css
@@ -1,6 +1,15 @@
 .main {
   display: flex;
   overflow: hidden;
+  color: var(--dark);
+}
+
+.invisibleLink {
+  color: var(--dark);
+}
+
+.invisibleLink:hover {
+  opacity: 50%;
 }
 
 .breadCrumble {
@@ -12,7 +21,7 @@
 }
 
 .elementLast {
-  composes: inlineEllipsis from '~styles/text.css';
+  composes: inlineEllipsis from "~styles/text.css";
   flex: 1 1 auto;
 }
 
@@ -20,13 +29,4 @@
   display: inline-block;
   padding: 3px 5px;
   vertical-align: top;
-}
-
-.themeDefault {
-  composes: main;
-}
-
-.themeDark {
-  composes: main;
-  color: var(--dark);
 }
