--- a/src/modules/dashboard/components/Extensions/ExtensionDetails.css
+++ b/src/modules/dashboard/components/Extensions/ExtensionDetails.css
@@ -9,7 +9,7 @@
 }
 
 .extensionText {
-  padding-top: 42px;
+  padding-top: 24px;
 }
 
 .extensionDetails {
